--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
 
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
-              <a href="catalog.html">
+              <!--<a href="catalog.html">
                   <li class="site-list__item">Каталог товаров
                   </li>
               </a>
@@ -56,7 +56,47 @@
                   height="18"
                   alt="Корзина"
                 />
-              </a>
+              </a>-->
+
+
+              
+            <li class="site-list__item">
+                <a href="catalog.html">
+                  Каталог товаров
+                </a>
+            </li>
+
+            <li class="site-list__item">
+                <a href="corder.html">
+                  Вязание на заказ
+                </a>
+            </li>
+
+            <li class="site-list__item">
+                <a href="search.html">
+                    <img
+                    class="site-list__item_icon"
+                    src="img/search.png"
+                    width="18"
+                    height="18"
+                    alt="Поиск"
+                  />
+                  Поиск по сайту
+                </a>
+            </li>
+
+            <li class="site-list__item">
+                <a href="basket.html">
+                    <img
+                class="site-list__item_icon"
+                src="img/cart.png"
+                width="22"
+                height="18"
+                alt="Корзина"
+              />
+                  Корзина: пока пуста
+                </a>
+            </li>
 
           </ul>
         </div>
