--- a/app/index.html
+++ b/app/index.html
@@ -104,7 +104,9 @@
     </header>
 
     <main class="page-main">
-      <h1 class="page-main__title">Милые штуки ручной работы для дома</h1>
+      <div class='page-main__title-wrapper'>
+        <h1 class="page-main__title">Милые штуки ручной работы для дома</h1>
+      </div>
 
       <section class="categories">
         <ul class="categories-list">
