--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo">
+      <a class="page-header__logo" href="/">
         <img
           class="page-header__logo-image"
           src="img/mishka-logo-mobile.png"
@@ -19,13 +19,14 @@
         />
       </a>
 
-
       <nav class="main-nav main-nav__closed">
-        <button class="main-nav__toggle" type="button"><span class='visually-hidden'>Открыть меню</span></button>
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
 
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
-              <!--<a href="catalog.html">
+            <!--<a href="catalog.html">
                   <li class="site-list__item">Каталог товаров
                   </li>
               </a>
@@ -58,53 +59,50 @@
                 />
               </a>-->
 
-
-              
             <li class="site-list__item">
-                <a href="catalog.html">
-                  Каталог товаров
-                </a>
+              <a href="catalog.html">
+                Каталог товаров
+              </a>
             </li>
 
             <li class="site-list__item">
-                <a href="corder.html">
-                  Вязание на заказ
-                </a>
+              <a href="corder.html">
+                Вязание на заказ
+              </a>
             </li>
 
             <li class="site-list__item">
-                <a href="search.html">
-                    <img
-                    class="site-list__item_icon"
-                    src="img/search.png"
-                    width="18"
-                    height="18"
-                    alt="Поиск"
-                  />
-                  Поиск по сайту
-                </a>
+              <a href="search.html">
+                <img
+                  class="site-list__item_icon"
+                  src="img/search.png"
+                  width="18"
+                  height="18"
+                  alt="Поиск"
+                />
+                Поиск по сайту
+              </a>
             </li>
 
             <li class="site-list__item">
-                <a href="basket.html">
-                    <img
-                class="site-list__item_icon"
-                src="img/cart.png"
-                width="22"
-                height="18"
-                alt="Корзина"
-              />
-                  Корзина: пока пуста
-                </a>
+              <a href="basket.html">
+                <img
+                  class="site-list__item_icon"
+                  src="img/cart.png"
+                  width="22"
+                  height="18"
+                  alt="Корзина"
+                />
+                Корзина: пока пуста
+              </a>
             </li>
-
           </ul>
         </div>
       </nav>
     </header>
 
     <main class="page-main">
-      <div class='page-main__title-wrapper'>
+      <div class="page-main__title-wrapper">
         <h1 class="page-main__title">Милые штуки ручной работы для дома</h1>
       </div>
 
